server/tests/contracts/snapshots/contracts_tests__contracts__auth_contracts__auth_user.snap
---
source: tests/contracts/auth_contracts.rs
assertion_line: 136
expression: user
---
{
  "id": "550e8400-e29b-41d4-a716-446655440000",
  "email": "test@example.com",
  "created_at": "2024-01-15T12:00:00Z",
  "updated_at": "2024-01-15T12:00:00Z"
}
