server/tests/contracts/snapshots/contracts_tests__contracts__auth_contracts__oauth_callback_params_new_user.snap
---
source: tests/contracts/auth_contracts.rs
assertion_line: 189
expression: params
---
{
  "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.example_token",
  "user_id": "550e8400-e29b-41d4-a716-446655440000",
  "email": "oauth@example.com",
  "is_new_user": true,
  "payment_required": true,
  "has_valid_invite": false
}
