server/tests/contracts/snapshots/contracts_tests__contracts__auth_contracts__payment_user_no_payment.snap
---
source: tests/contracts/auth_contracts.rs
assertion_line: 149
expression: payment_user
---
{
  "payment_required": true,
  "payment_status": null,
  "subscription_end_date": null,
  "has_valid_invite": false,
  "invite_expires_at": null
}
