server/tests/contracts/snapshots/contracts_tests__contracts__auth_contracts__unified_auth_response_paid_user.snap
---
source: tests/contracts/auth_contracts.rs
assertion_line: 102
expression: response
---
{
  "auth_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.example_token",
  "auth_user": {
    "id": "550e8400-e29b-41d4-a716-446655440000",
    "email": "paid@example.com",
    "created_at": "2024-01-15T12:00:00Z",
    "updated_at": "2024-01-15T12:00:00Z"
  },
  "payment_user": {
    "payment_required": false,
    "payment_status": "active",
    "subscription_end_date": "2025-01-15T12:00:00Z",
    "has_valid_invite": false,
    "invite_expires_at": null
  }
}
